# job_parser

./: README.md  pyproject.toml  tox.ini
app/: constants.py  main.py
app/schemas/: job_items.py
tests/: conftest.py  test_get_position_data.py
