[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["annalitvin <litvin_any@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.10.0"
pyarrow = "^16.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "^24.1.0"
pytest = "^7.0.1"
pytest_asyncio = "^0.23.0"
asyncmock = "^0.4.0"
pytest-mock = "^3.13.0"
mypy = "^1.0.0"
tox = "^4.13.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
